Attempt to solve thumbnail image be croped on ios

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -100,6 +100,10 @@
   object-fit: cover;  
   object-position: center;
 
+  @media (max-width: $small) {
+    height: 100%;
+  }
+
   transition: 300ms ease-in-out;
   &:hover {
     transform: scale(1.1);
